# website

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  develop_server.sh  fabfile.py  hugo.toml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
content/: _index.md  april-2015-meet-minutes.md  april-2019-meeting-minutes.md  august-2014-meet-minutes.md  august-2015-meet-minutes.md  august-2016-meet-minute.md  august-2020-meeting-minutes.md  december-2014-meet-minutes.md  february-2015-meet-minutes.md  february-2017-meeting-minutes.md  january-2015-meet-minutes.md  january-2016-meet-minutes.md  january-2017-meet-minutes.md  january-2019-meeting-minutes.md  january-2020-meeting-minutes.md  july-2015-meet-minutes.md  july-2020-meeting-minutes.md  june-2015-meet-minutes.md  june-2016-meet-minutes.md  june-2018-meeting-minutes.md  june-2020-meeting-minutes.md  mailing-list-guidelines.md  may-2015-meet-minutes.md  may-2016-meet-minutes.md  may-2018-meet-minutes.md  meetup-apr-2015.md  meetup-apr-2016.md  meetup-dec-2014.md  meetup-feb-2015.md  meetup-feb-2016.md  meetup-jan-2015.md  meetup-june-2015.md  meetup-mar-2015.md  meetup-mar-2017.md  meetup-may-2015.md  meetup-may-2016.md  meetup-nov-2014.md  meetup-oct-2014.md  meetup-oct-2015.md  meetup-oct-2016.md  (+13 more)
data/: upcoming_event.yaml
docs/: april-2015-meet-minutes.html  archives.html  august-2014-meet-minutes.html  august-2015-meet-minutes.html  august-2016-meet-minute.html  authors.html  categories.html  december-2014-meet-minutes.html  december-2015-meet-minutes.html  february-2015-meet-minutes.html  february-2016-meet-minutes.html  february-2017-meeting-minutes.html  index.html  january-2015-meet-minutes.html  january-2016-meet-minutes.html  january-2017-meet-minutes.html  july-2015-meet-minutes.html  (+42 more)
(+173 files in other folders)
