[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chennaipy-website"
version = "1.0.0"
description = "Chennai Python User Group Website"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "blinker",
    "docutils",
    "feedgenerator",
    "Jinja2",
    "Markdown",
    "MarkupSafe",
    "pelican",
    "Pygments",
    "python-dateutil",
    "pytz",
    "six",
    "Unidecode",
]

[project.scripts]
dev = "scripts.tools:dev_main"
clean = "scripts.tools:clean_main"

[tool.setuptools]
# Explicitly exclude directories that are not Python packages
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["theme*", "output*", "content*", "__pycache__*"]

[tool.uv]
dev-dependencies = []
