[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chennaipy-website"
version = "1.0.0"
description = "Chennai Python User Group Website"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "blinker==1.9.0",
    "docutils==0.22.2",
    "feedgenerator==2.2.1",
    "Jinja2==3.1.6",
    "Markdown==3.9",
    "MarkupSafe==3.0.3",
    "pelican==4.11.0",
    "Pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "Unidecode==1.4.0",
]

[project.scripts]
dev = "scripts.tools:dev_main"
clean = "scripts.tools:clean_main"

[tool.setuptools]
# Explicitly exclude directories that are not Python packages
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["theme*", "output*", "content*", "__pycache__*"]

[tool.uv]
dev-dependencies = []
